--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,23 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script> -->
+    <!-- <script>
+      const firebaseApp = firebase.initializeApp({
+        apiKey: "AIzaSyBbYlvaogZoswDxmjP5DWVSrHrDaGHgXIo",
+        authDomain: "shopshop-b24a4.firebaseapp.com",
+        projectId: "shopshop-b24a4",
+        storageBucket: "shopshop-b24a4.appspot.com",
+        messagingSenderId: "370435984740",
+        appId: "1:370435984740:web:9460495355fc39075a7e71",
+        measurementId: "G-8RH8PL4TXT",
+      });
+      const db = firebaseApp.firestore();
+      const auth = firebaseApp.auth();
+    </script> -->
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
